# djangosaml2idp2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: python-package.yml  tests.yml
djangosaml2idp/: utils.py
djangosaml2idp3/: utils.py
docs/example_setup/: README.rst
example_setup/idp/: Dockerfile  requirements.txt
example_setup/sp/: Dockerfile  requirements.txt
tests/: test_forms.py  test_utils.py  test_views.py
