[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | _build
  | .venv
  | tests-reports
)/
'''

[tool.poetry]
name = "djangosaml2idp2"
version = "1.0.0"
description = "Does things"
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
license = "MIT"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = "1.8.0"
poetry-plugin-shell = "1.0.1"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
arrow = "^1.3.0"
appdirs = "1.4.4"
attrs = "20.3.0"
certifi = "2023.7.22"
cffi = "1.14.5"
cfgv = "3.2.0"
chardet = "4.0.0"
click = "7.1.2"
codecov = "2.1.13"
coverage = "5.5"
cryptography = "42.0.2"
defusedxml = "0.6.0"
django = "4.2.22"
distlib = "0.3.7"
elementpath = "^4.1.5"
filelock = "3.12.2"
identify = "2.0.0"
idna = "3.7"
importlib-resources = "5.1.1"
iniconfig = "1.1.1"
mccabe = "0.6.1"
nodeenv = "1.5.0"
packaging = "20.9"
pip-tools = "5.5.0"
pluggy = "0.13.1"
pre-commit = "2.10.1"
pycodestyle = "2.6.0"
pycparser = "2.20"
pydocstyle = "5.1.1"
pyflakes = "2.2.0"
pylama = "7.7.1"
pyopenssl = "24.2.1"
pyparsing = "2.4.7"
pysaml2 = "7.5.2"
pytest-cov = "2.11.1"
pytest = "7.3.1"
python-dateutil = "2.8.1"
pytz = "2021.1"
requests = "2.32.4"
requests-mock = "^1.12.1"
setuptools = "^80.9.0"
six = "1.15.0"
snowballstemmer = "2.1.0"
toml = "0.10.2"
tox = "3.22.0"
urllib3 = "1.26.19"
virtualenv = "20.26.6"
xmlschema = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-export]
poetry-plugin-export = "1.8.0"
