[tool.black]
line-length = 100
target-version = ['py313']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | _build
  | .venv
  | tests-reports
)/
'''

[tool.poetry]
name = "djangosaml2idp3"
version = "0.9.3"
description = "Forked from the original https://github.com/OTA-Insight/djangosaml2idp to provide bugfixes and upgrades to python and django support"
authors = ["Department for Business and Trade SRE Team <sre-team@digital.trade.gov.uk>"]
readme = "README.rst"
license = "MIT"
packages = [{ include = "djangosaml2idp" }]

[tool.poetry.requires-plugins]
poetry-plugin-export = "1.8.0"
poetry-plugin-shell = "1.0.1"

[tool.poetry.dependencies]
arrow = "^1.3.0"
appdirs = "1.4.4"
attrs = "20.3.0"
black = "^25.1.0"
certifi = "2024.07.04"
cffi = "1.15.1"
cfgv = "3.2.0"
chardet = "5.2.0"
click = "8.2.1"
codecov = "2.1.13"
coverage = "7.2.4"
cryptography = "43.0.3"
defusedxml = "0.7.1"
django = "4.2.22"
distlib = "0.3.9"
distribute = "0.7.3"
elementpath = "^4.8.0"
filelock = "3.18.0"
flake8 = "^7.2.0"
identify = "2.0.0"
idna = "3.7"
importlib-resources = "5.1.1"
iniconfig = "2.0.0"
mccabe = "0.7.0"
nodeenv = "1.5.0"
packaging = "25.0"
pip-tools = "6.13.0"
pluggy = "1.6.0"
pre-commit = "2.10.1"
pycodestyle = "2.13.0"
pycparser = "2.20"
pydocstyle = "6.3.0"
pyflakes = "3.3.2"
pylama = "8.4.1"
pyopenssl = "^24.2.1"
pyparsing = "3.0.9"
pysaml2 = "7.5.2"
pytest-cov = "4.0.0"
pytest-django = "4.5.2"
pytest = "7.3.1"
python = "^3.11"
python-dateutil = "2.8.1"
pytz = "2025.1"
pyyaml = "^6.0.2"
requests = "2.32.4"
requests-mock = "^1.12.1"
setuptools = "^80.9.0"
six = "1.15.0"
snowballstemmer = "3.0.1"
toml = "0.10.2"
tox = "4.26.0"
urllib3 = "1.26.19"
virtualenv = "20.31"
xmlschema = "^2.4.0"

[tool.poetry-plugin-export]
poetry-plugin-export = "1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
