[tool.black]
line-length = 100
target-version = ['py313']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | _build
  | .venv
  | tests-reports
)/
'''

[tool.poetry]
name = "djangosaml2idp2"
version = "0.9.5"
description = "Forked from the original https://github.com/OTA-Insight/djangosaml2idp to provide bugfixes and upgrades to python and django support."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
readme = "README.rst"
license = "MIT"
packages = [{ include = "djangosaml2idp" }]

[tool.poetry.requires-plugins]
poetry-plugin-export = "1.8.0"
poetry-plugin-shell = "1.0.1"

[tool.poetry.dependencies]
appdirs = ">=1.4.4"
attrs = ">=25.3.0"
black = ">=25.1.0"
certifi = ">=2025.6.15"
cffi = ">=1.17.1"
cfgv = ">=3.4.0"
chardet = ">=5.2.0"
click = ">=8.2.1"
codecov = ">=2.1.13"
coverage = ">=7.9.1"
cryptography = ">=43.0.3"
defusedxml = ">=0.7.1"
django = ">=4.2.22"
distlib = ">=0.3.9"
elementpath = ">=4.8.0"
filelock = ">=3.18.0"
flake8 = ">=7.2.0"
identify = ">=2.6.12"
idna = ">=3.10"
importlib-resources = ">=6.5.2"
iniconfig = ">=2.1.0"
nodeenv = ">=1.9.1"
packaging = ">=25.0"
pip-tools = ">=7.4.1"
pluggy = ">=1.6.0"
pre-commit = ">=3.5.0,<4.0.0"
pycparser = ">=2.22"
pyopenssl = ">=24.2.1,<24.3.0"
pyparsing = ">=3.2.3"
pysaml2 = "~7.5.2"
pytest-cov = ">=6.2.1"
pytest = ">=8.4.1"
python = ">=3.11,<4.0"
python-dateutil = ">=2.9.0"
pytz = ">=2025.2"
pyyaml = ">=6.0.2"
requests = ">=2.32.4"
requests-mock = ">=1.12.1"
setuptools = ">=79.0.1"
six = ">=1.17.0"
snowballstemmer = ">=3.0.1"
toml = ">=0.10.2"
tox = ">=4.27.0"
urllib3 = ">=2.4.0"
virtualenv = ">=20.31.2"
xmlschema = ">=2.5.1"

[tool.poetry-plugin-export]
poetry-plugin-export = "1.8.0"
