[bdist_wheel]
universal = 1

[metadata]
description_file = README.rst
license_file = LICENSE.txt

[aliases]
test = pytest

[flake8]
linters = pycodestyle,pyflakes,mccabe
ignore = E122,E127,E128,E131,W191,E501,C901,C111,C301
skip =
    build/*,
    dist/*,
    docs/*,
    */manage.py,
    *migrations*,
    venv/*

[pep8]
ignore = C111,C301,E122,E127,E128,E131,E501,E502,E722,E731,W605

[mypy]
ignore_missing_imports = True

[mypy-djangosaml2idp.migrations.*]
ignore_errors = True

[tool:pytest]
addopts =
    -rX
    --cov=djangosaml2idp
    --cov-report=term-missing
    --cov-report=xml:cov.xml
django_find_project = false
norecursedirs = env
testpaths = tests/
pythonpath = .
DJANGO_SETTINGS_MODULE = tests.settings

[coverage:run]
omit =
    */migrations/*

[tox:tox]
envlist =
    py{3.7,3.8,3.9,3.10,3.11,3.12}-django{3.2,4.0,4.1,4.2}
    format
    typing

[testenv]
extras = testing
deps =
    django3.2: django~=3.2
    django4.0: django~=4.0
    django4.1: django~=4.1
    django4.2: django~=4.2
commands =
    pip list
    pytest tests

[testenv:format]
skipsdist = True
deps = flake8
commands = flake8 djangosaml2idp

[testenv:typing]
ignore_outcome = True
skipsdist = True
deps =
    mypy
    django-stubs
commands =
    pip list
    mypy djangosaml2idp
